--- a/BEETuntitled.html
+++ b/BEETuntitled.html
@@ -10,6 +10,7 @@
     <h1>The BIGGEST TITLE</h1>
     <h6>H6</h6>
     <h2 title="This is less important heading">H2 heading</h2>
+    <h3>Here is my H3 message</h3>
     <div>
       <p id="test_id">Test test<p>
       <a href="https://www.google.com">Link</a>
